fix: CLIN-929 alignement HC

--- a/client/src/components/screens/PatientVariant/styles.scss
+++ b/client/src/components/screens/PatientVariant/styles.scss
@@ -1,7 +1,10 @@
 .occurenceDrawer{
-    .description {
-        span[class$="-item-label"] {
-          width: 250px;
-        }
+  .description {
+      span[class$="-item-label"] {
+        width: 250px;
       }
+      .hcCountLink{
+        height: 22px;
+      }
+    }
 }
